--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <link href="index.css" media="screen" rel="screen" rel="stylesheet" type="text/css"/>
   </head>
   <body>
+<div class="pagecontent">
+<h1>Alben</h1>
+<div class="line"></div>
+</div>
       <h1>Alben</h1>
     </body>
 </html>
