--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="line"></div>
 </div>
 <img src="http://cdn.shopify.com/s/files/1/0171/7522/products/DSC_0222_-_Version_2_1024x1024.jpg"/>
-<h2 class="red"><b>Jefferson Airplane</b> Surrealistic Pillow</h2>
+<h2><b>Jefferson Airplane</b> Surrealistic Pillow</h2>
 <ol>
 <li>She Has Funny Cars</li>
 <li>Somebody to Love</li>
