--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 <div class="pagecontent">
 <h1>Alben</h1>
 <div class="line"></div>
-</div>
+  <div>
+    <div class="image-wraper"> class="cover-image"
 <img src="http://cdn.shopify.com/s/files/1/0171/7522/products/DSC_0222_-_Version_2_1024x1024.jpg"/>
+      </div> <div class="text-wraper">
 <h2><b>Jefferson Airplane</b> Surrealistic Pillow</h2>
 <ol>
 <li>She Has Funny Cars</li>
@@ -25,5 +27,9 @@
 <li>White Rabbit</li>
 <li>Plastic Fantastic Lover</li>
 </ol>
+    >/div>
+    </div> <div class="clear"></div> <div class="line light"></div>
+  
+</div>
         </body>
 </html>
