--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <h1>Alben</h1>
 <div class="line"></div>
   <div>
-    <div class="image-wraper"> class="cover-image"
+    <div class="image-wraper" class="cover-image">
 <img src="http://cdn.shopify.com/s/files/1/0171/7522/products/DSC_0222_-_Version_2_1024x1024.jpg"/>
       </div> <div class="text-wraper">
 <h2><b>Jefferson Airplane</b> Surrealistic Pillow</h2>
