--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <li>White Rabbit</li>
 <li>Plastic Fantastic Lover</li>
 </ol>
-    >/div>
+    </div>
     </div> <div class="clear"></div> <div class="line light"></div>
   
 </div>
