--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Album Covers</title>
-    <link href="index.css" media="screen" rel="screen" rel="stylesheet" type="text/css"/>
+    <link href="index.css" media="screen" rel="stylesheet" type="text/css"/>
   </head>
   <body>
 <div class="pagecontent">
