--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <div class="pagecontent">
 <h1>Alben</h1>
-<div class="line"></div> <div> <div class="image-wraper"> <img class="cover-image" src="http://upload.wikimedia.org/wikipedia/en/a/a1/Nirvana- Bleach.jpg"/> </div> <div class="text-wraper">
+<div class="line"></div> <div> <div class="image-wraper"> <img src="http://cdn.shopify.com/s/files/1/0171/7522/products/DSC_0222_-_Version_2_1024x1024.jpg"/> </div> <div class="text-wraper">
 <h2><b>Nirvana</b> Bleach</h2>
 <ol>
 <li>Blew</li>
