--- a/index.html
+++ b/index.html
@@ -24,5 +24,10 @@
 <li>Sifting</li>
 </ol> </div> <div class="clear"></div> <div class="line light"></div> </div>
 </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js"
+integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8="
+crossorigin="anonymous">
+</script>
+<script src="index.js"></script>
 </body>
 </html>
