--- a/index.html
+++ b/index.html
@@ -4,17 +4,21 @@
     <meta charset="UTF-8">
     <title>Album Covers</title>
     <link href="index.css" media="screen" rel="stylesheet" type="text/css"/>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js"
+integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8="
+crossorigin="anonymous">
+</script>
+<script src="index.js"></script>
   </head>
 <body>
 <div class="pagecontent">
 <h1>Alben</h1>
 <div class="line"></div>
-  <div>
+  <div class="album">
     <div class="image-wraper">
       <a href="https://www.youtube.com/watch?v=V5Jv3uKyKLc&list=PLzEG2f9QAl8OaEk6_Mz2gG3DXBImWofzm">
       <img class="cover-image" src="http://cdn.shopify.com/s/files/1/0171/7522/products/DSC_0222_-_Version_2_1024x1024.jpg"/>
       </a>
-    </div>
     <div class="text-wraper">
 <h2><b>Nirvana</b> Bleach</h2>
 <ol>
@@ -29,12 +33,9 @@
 <li>Swap Meet</li>
 <li>Mr. Moustache</li>
 <li>Sifting</li>
-</ol> </div> <div class="clear"></div> <div class="line light"></div> </div>
+</ol> </div> 
+    </div>
+    <div class="clear"></div> <div class="line light"></div> </div>
 </div>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js"
-integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8="
-crossorigin="anonymous">
-</script>
-<script src="index.js"></script>
 </body>
 </html>
